--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -502,7 +502,7 @@
 		\[f(x)=h(v_{1}(x),\dots,v_{k}(x)),\quad\text{per a tot }x\in U.\]
 	\end{definition}
 	\begin{proposition}\label{prop:dependència funcional 4 punts}
-		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert, \(f\colon U\to\mathbb{R}^{m}\) una funció i \(v_{1},\dots,v_{d}\), \(d\) funcions escalars sobre \(U\) que defineixen un sistema de coordenades que anomenarem \(\Phi(x)=(v_{1}(x),\dots,v_{d}(x))\). Aleshores, donat un \(k<d\) els següents enunciats són equivalents:
+		Siguin \(U\subseteq\mathbb{R}^{d}\) un obert, \(f\colon U\to\mathbb{R}^{m}\) una funció i \(v_{1},\dots,v_{d}\) \(d\) funcions escalars sobre \(U\) que defineixen un sistema de coordenades que anomenarem \(\Phi(x)=(v_{1}(x),\dots,v_{d}(x))\). Aleshores, donat un \(k<d\) els següents enunciats són equivalents:
 		\begin{enumerate}
 			\item\label{enum:dependència funcional 4 punts 1} \(f\) depèn funcionalment de \(v_{1},\dots,v_{k}\) per a tot \(x\in U\).
 			\item\label{enum:dependència funcional 4 punts 2} \(\nabla f(x)\) és combinació lineal de \(\nabla v_{1}(x),\dots,\nabla v_{k}(x)\) per a tot \(x\in U\).
