--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -12,35 +12,41 @@
 		Aleshores direm que
 		és una equació diferencial ordinària. També direm que \(t\) és la variable temporal, \(u(x)\) la variable espacial.
 	\end{definition}
-	\begin{example}
-		\label{ex:edos1:1}
-		Considerem l'equació diferencial ordinària d'ordre \(1\) següent:
+	\begin{proposition}
+		\label{prop:edos1:1}
+		Siguin \(I\) un interval de \(\mathbb{R}\) i \(f\colon I\longrightarrow\mathbb{R}^{m}\) una funció contínua. Aleshores l'equació diferencial ordinària d'ordre \(1\)
 		\begin{equation}
-			\label{edos1:ex1:eq1}
+			\label{edos1:prop1:eq1}
 			\frac{\partial u(x)}{\partial x}=f(u(x)).
 		\end{equation}
-		on \(I\) és un interval de \(\mathbb{R}\) i \(f\colon I\longrightarrow\mathbb{R}^{m}\) una funció contínua.
-		\begin{solution}
-			Observem primer que pel Teorema \myref{thm:Weierstrass màxims i mínims múltiples variables} la funció \(f(x)\) està acotada en \(I\), i pel Teorema \myref{thm:Contínua + acotada implica integrable Riemann} tenim que la funció \(f(x)\) és integrable Riemann, i per tant, pel \myref{thm:Teorema Fonamental del Càlcul}, trobem que per a tot \(x_{0}\) de \(I\)
+		té una única solució de la forma
+		\[u(x)=\int_{x_{0}}^{x}f(u(t))\text{d}t.\]
+		\begin{proof}
+			Observem primer que pel \myref{thm:Weierstrass màxims i mínims múltiples variables} la funció \(f(x)\) està acotada en \(I\), i pel Teorema \myref{thm:Contínua + acotada implica integrable Riemann} tenim que la funció \(f(x)\) és integrable Riemann, i per tant, pel \myref{thm:Teorema Fonamental del Càlcul}, trobem que per a tot \(x_{0}\) de \(I\)
 			\[u(x)=\int_{x_{0}}^{x}f(u(t))\text{d}t\]
-			és una solució de l'equació diferencial ordinària \eqref{edos1:ex1:eq1}.
-		\end{solution}
-	\end{example}
+			és una solució de l'equació diferencial ordinària \eqref{edos1:prop1:eq1}.
+			
+			Aquesta demostració també ens serveix per veure la unicitat.
+		\end{proof}
+	\end{proposition}
 	\begin{observation}
-		Observem que, en l'exemple \myref{ex:edos1:1}, si la funció \(f\) no és integrable en \(I\) aleshores l'equació diferencial \eqref{edos1:ex1:eq1} no té solució. %Integrable Riemann?
+		Observem que, en la proposició \myref{prop:edos1:1}, si la funció \(f\) no és integrable en \(I\) aleshores l'equació diferencial \eqref{edos1:prop1:eq1} no té solució. %Integrable Riemann?
 	\end{observation}
-	\begin{example}[Problema de Cauchy]
-		\label{ex:Problema de Cauchy}
-		Siguin \((a,b)\) un interval obert de \(\mathbb{R}\), \(f\colon(a,b)\longrightarrow\mathbb{R}\) una funció contínua tal que \(f(x)\neq0\) per a tot \(x\) de \((a,b)\), \(x_{0}\) un element de \((a,b)\) i \(t_{0}\) un real. Considerem el sistema
+	\begin{proposition}[Problema de Cauchy]
+		\labelname{}\label{prop:problema de Cauchy}
+		Siguin \((a,b)\) un interval obert de \(\mathbb{R}\), \(f\colon(a,b)\longrightarrow\mathbb{R}\) una funció contínua tal que \(f(x)\neq0\) per a tot \(x\) de \((a,b)\), \(x_{0}\) un element de \((a,b)\) i \(t_{0}\) un real. Aleshores el sistema
 		\begin{equation}
-			\label{ex:Problema de Cauchy:eq1}
+			\label{prop:problema de Cauchy:eq1}
 			\begin{cases}
 				\displaystyle \frac{\partial u(x)}{\partial x}=f(x) \\
 				\displaystyle u(t_{0})=x_{0}
-			\end{cases}.
+			\end{cases}
 		\end{equation}
-		Volem trobar totes les solucions a aquest sistema.
-		\begin{solution}
+		té una única solució de la forma
+		\[u(t)=F^{-1}(t-t_{0})\]
+		on
+		\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{f(t)}.\]
+		\begin{proof}
 			Observem que, per la definició de \myref{def:equació diferencial ordinària d'ordre n} l'equació
 			\[\frac{\partial u(x)}{\partial x}=f(x)\]
 			és una equació ordinària d'orde \(1\).
@@ -50,25 +56,25 @@
 			\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{f(t)}.\]
 			Pel \myref{thm:Teorema Fonamental del Càlcul} tenim que
 			\begin{equation}
-				\label{ex:problema de Cauchy:eq1}
+				\label{prop:problema de Cauchy:eq2}
 				\frac{\partial F(x)}{\partial x}=\frac{1}{f(x)},
 			\end{equation}                
 			i com que \(\frac{1}{f(x)}\neq0\) per a tot \(x\) de \((a,b)\) tenim que \(F(x)\) és invertible en \((a,b)\). Denotem amb \(F^{-1}\) la seva inversa.
 			
 			Ara bé, tenim que
 			\begin{equation}
-				\label{ex:problema de Cauchy:eq2}
+				\label{prop:problema de Cauchy:eq3}
 				\frac{\partial F(u(x))}{\partial x}=1,
 			\end{equation}
 			ja que
 			\begin{align*}
 				\frac{\partial F(u(x))}{\partial x}&=\frac{\partial F(u(x))}{\partial u(x)}\frac{\partial u(x)}{\partial x}\tag{\myref{thm:regla de la cadena}}\\
-				&=\frac{1}{f(u(x))}\frac{\partial u(x)}{\partial x}\tag{\ref{ex:problema de Cauchy:eq1}}\\
-				&=\frac{1}{f(u(x))}f(u(x))=1.\tag{\ref{ex:Problema de Cauchy:eq1}}\\
+				&=\frac{1}{f(u(x))}\frac{\partial u(x)}{\partial x}\tag{\ref{prop:problema de Cauchy:eq2}}\\
+				&=\frac{1}{f(u(x))}f(u(x))=1.\tag{\ref{prop:problema de Cauchy:eq1}}\\
 			\end{align*}
 			I per tant, pel \myref{thm:Teorema Fonamental del Càlcul} trobem que
 			\[\int_{t_{0}}^{t}\frac{\partial F(u(x))}{\partial x}\text{d}x=F(u(t))-F(u(t_{0})),\]
-			i per \eqref{ex:problema de Cauchy:eq2} trobem \(F(u(t))-F(u(t_{0}))=t-t_{0}\)
+			i per \eqref{prop:problema de Cauchy:eq2} trobem \(F(u(t))-F(u(t_{0}))=t-t_{0}\)
 			
 			Ara bé, per hipòtesi, tenim que \(u(t_{0})=x_{0}\), i trobem
 			\[F(x_{0})=\int_{x_{0}}^{x_{0}}\frac{1}{f(t)}\text{d}t=0.\]
@@ -78,52 +84,127 @@
 			\[u(t)=F^{-1}(t-t_{0})\]
 			per a tot \(t\) de \((t_{0}+F(a), t_{0}+F(b))\).
 			
-			Amb aquesta solució també podem veure que aquesta és la única solució de l'equació diferencial.
+			Amb aquesta demostració també podem veure que aquesta és la única solució de l'equació diferencial.
+		\end{proof}
+	\end{proposition}
+	\begin{example}
+		\label{ex:edos problema de Cauchy 1}
+		Sigui \(\alpha\) un real. Volem trobar una solució al sistema
+		\begin{equation}
+			\label{ex:edos problema de Cauchy 1:eq1}
+			\begin{cases*}
+				\frac{\partial u(x)}{\partial x}=\alpha x^{2} \\
+				u(1)=1.
+			\end{cases*}
+		\end{equation}
+		\begin{solution}
+			Observem que, per la definició de \myref{def:equació diferencial ordinària d'ordre n} que l'equació \(\frac{\partial u(x)}{\partial x}=\alpha x^{2}\) és una equació diferencial ordinària d'odre \(1\). per la proposició \myref{prop:problema de Cauchy} trobem que les solucions de \eqref{ex:edos problema de Cauchy 1:eq1} són de la forma
+			\[u(x)=F^{-1}(x-1)\]
+			on
+			\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{\alpha t^{2}}.\]
+			
+			Per tant, tenim que
+			\[F(x)=\frac{x-1}{\alpha x}\]
+			i trobem
+			\[u(x)=\frac{1}{1-\alpha (x-1)}.\qedhere\]
 		\end{solution}
 	\end{example}
-	\begin{example}[Equacions de variables separades]
-		\label{ex:Equacions de variables separades}
-		Siguin \((a,b)\) i \((t_{1},t_{2}\) dos intervals oberts de \(\mathbb{R}\), \(f\colon(a,b)\longrightarrow\mathbb{R}\) i \(g\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\) dues funcions contínues amb \(f(x)\neq0\) per a tot \(x\) de \((a,b)\), \(x_{0}\) un element de \((a,b)\) i \(t_{0}\) un element de \((t_{1},t_{2})\). Considerem el problema de Cauchy
+	\begin{proposition}[Equacions de variables separades]
+		\labelname{}\label{prop:equacions de variables separades}
+		Siguin \((a,b)\) i \((t_{1},t_{2})\) dos intervals oberts de \(\mathbb{R}\), \(f\colon(a,b)\longrightarrow\mathbb{R}\) i \(g\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\) dues funcions contínues amb \(f(x)\neq0\) per a tot \(x\) de \((a,b)\), \(x_{0}\) un element de \((a,b)\) i \(t_{0}\) un element de \((t_{1},t_{2})\). Aleshores el problema de Cauchy
 		\begin{equation}
 			\begin{cases}
-				\displaystyle \frac{\partial u(x)}{\partial x}=g(t)f(u(x)) \\
+				\displaystyle \frac{\partial u(x)}{\partial x}=g(x)f(u(x)) \\
 				\displaystyle u(t_{0})=x_{0}.
 			\end{cases}
 		\end{equation}
-		Volem trobar les solucions d'aquest problema de Cauchy.
+		té una única solució de la forma
+		\[u(x)=F^{-1}\left(\int_{t_{0}}^{x}g(t)\text{d}t\right)\]
+		on
+		\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{f(t)}.\]
+		\begin{proof}
+			Definim \(h=\frac{1}{f(u(x))}\) i observem que
+			\[h(u(x))\frac{\partial u(x)}{\partial x}=g(x)\]
+			i per tant
+			\[\int_{t_{1}}^{t_{2}}h(u(x))\frac{\partial u(x)}{\partial x}\text{d}{x}=\int_{t_{1}}^{t_{2}}g(x)\text{d}x.\]
+			
+			Ara bé, per la \myref{thm:regla de la cadena} i el \myref{thm:Teorema Fonamental del Càlcul} tenim que això és
+			\[H(x)=G(x)+C\]
+			on \(C\) és un real i
+			\[H(x)=\int h(x)\text{d}x\quad\text{i}\quad G(x)=\int g(x)\text{d}x\]
+			i per tant
+			\[H(u(x))=G(x)+C\]
+%			Podem seguir la solució de la proposició \myref{prop:problema de Cauchy} per trobar que les úniques solucions són
+%			\[u(x)=F^{-1}\left(\int_{t_{0}}^ {x}g(t)\text{d}t\right)\]
+%			on
+%			\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{f(t)}.\qedhere\]
+		\end{proof}
+	\end{proposition}
+	\begin{example}
+		\label{ex:equacions de variables separades}
+		Volem trobar una solució al sistema
+		\begin{equation}
+			\label{ex:equacions de variables separades:eq1}
+			\begin{cases*}
+				\displaystyle \frac{\partial u(x)}{\partial x}=\frac{u(x)^{3}x}{\sqrt{1+x^{2}}} \\
+				u(0)=1.
+			\end{cases*}
+		\end{equation}
 		\begin{solution}
-			Podem seguir la solució de l'exemple \myref{ex:Problema de Cauchy} per trobar que les úniques solucions són
-			\[u(t)=F^{-1}\left(\int_{t_{0}}{t}g(x)\text{d}x\right)\]
+			Definim
+			\[f(u(x))=u(x)^{-3}\quad\text{i}\quad g(x)=\frac{x}{\sqrt{1+x^{2}}}.\]
+			Per tant tenim que
+			\[f(u(x))\frac{\partial u(x)}{\partial x}=g(x)\]
+			
+			Observem que
+			\[u(x)=\int_{x_{0}}^{x}\frac{yu(x)}{\sqrt{1+y^{2}}}\text{d}x\]
+			Per la proposició \myref{prop:equacions de variables separades} tenim que les solucions al sistema \eqref{ex:equacions de variables separades:eq1} són de la forma
+			\[u(t)=F^{-1}\left(\int_{t_{0}}^ {t}\frac{y}{\sqrt{1+y^{2}}}\text{d}y\right)\]
 			on
-			\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{f(t)}.\qedhere\]
+			\[F(x)=\int_{x_{0}}^{x}\frac{\text{d}t}{u(t)^{3}}.\]
+			Per tant tenim que
+			\[\]
 		\end{solution}
 	\end{example}
-	\begin{example}[Equacions diferencials lineals]
-		\label{ex:Equacions diferencials lineals}
-		Siguin \((t_{1},t_{2})\) un interval obert de \(\mathbb{R}\) i \(a\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\), \(b\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\) dues funcions contínues. Considerem el problema de Cauchy:
+	\begin{proposition}[Equacions diferencials lineals]
+		\labelname{}\label{prop:equacions diferencials lineals}
+		Siguin \((t_{1},t_{2})\) un interval obert de \(\mathbb{R}\) i \(a\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\), \(b\colon(t_{1},t_{2})\longrightarrow\mathbb{R}\) dues funcions contínues. Aleshores el problema de Cauchy
 		\begin{equation}
-			\label{ex:equacions diferencials lineals:eq1}
+			\label{prop:equacions diferencials lineals:eq1}
 			\begin{cases}
 				\displaystyle \frac{\partial u(x)}{\partial x}=a(t)u(x)+b(t)\\
 				\displaystyle u(t_{0})=x_{0}.
 			\end{cases}
 		\end{equation}
-		Volem trobar totes les solucions al sistema.
-		\begin{solution}
+		té una única solució de la forma
+		\[u(x)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\text{d}\tau}\text{d}s\right)e^{\int_{t_{0}}^{x}a(s)\text{d}s}.\]
+		\begin{proof}
 			Considerem el canvi de variable
 			\begin{equation}
-				\label{ex:equacions diferencials lineals:eq2}
+				\label{prop:equacions diferencials lineals:eq2}
 				u(x)=c(x)e^{\int_{t_{0}}^{x}a(s)\text{d}s}.
 			\end{equation}
-			Aleshores tenim
+			Aleshores pel \myref{thm:Teorema Fonamental del Càlcul} tenim %I ref de la derivada del producte
+			\[\frac{\partial u(x)}{\partial x}=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\text{d}s}+c(x)a(x)e^{\int_{t_{0}}^{x}a(s)\text{d}s}\]
+			i per \eqref{prop:equacions diferencials lineals:eq1} i \eqref{prop:equacions diferencials lineals:eq2} tenim
+			\[a(t)u(x)+b(t)=\frac{\partial c(x)}{\partial x}e^{\int_{t_{0}}^{x}a(s)\text{d}s}+a(x)u(x).\]
+			Per tant trobem
+			\[\frac{\partial c(x)}{\partial x}=b(x)e^{\int_{t_{0}}^{x}a(s)\text{d}s}\]
+			i tenim
 			\begin{equation}
-				\label{ex:equacions diferencials lineals:eq3}
+				\label{prop:equacions diferencials lineals:eq3}
 				\begin{cases}
 					\displaystyle \frac{\partial c(x)}{\partial x}=b(x)e^{\int_{t_{0}}^{x}a(s)\text{d}s}\\
-					\displaystyle u(t_{0})=x_{0}.
+					\displaystyle c(t_{0})=x_{0}.
 				\end{cases}
 			\end{equation}
 			
-		\end{solution}
-	\end{example}
+			Aleshores per la proposició \myref{prop:problema de Cauchy} trobem que aquest problema té una única solució, i és de la forma
+			\[c(t)=x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\text{d}\tau}\text{d}s\]
+			i desfent el canvi de variables \eqref{prop:equacions diferencials lineals:eq2} trobem que les solucions són de la forma
+			\[u(x)=\left(x_{0}+\int_{t_{0}}^{t}b(s)e^{-\int_{t_{0}}^{s}a(\tau)\text{d}\tau}\text{d}s\right)e^{\int_{t_{0}}^{x}a(s)\text{d}s}.\qedhere\]
+		\end{proof}
+	\end{proposition}
 \end{document}
+
+% http://issc.uj.ac.za/downloads/problems/ordinary.pdf
