Afegit una mica de temari a topologia. Aplicacions contínues, homeomorfismes, exemples...

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -121,6 +121,8 @@
 \newcommand{\implica}{\implies}
 \newcommand{\implicatper}{\impliedby}
 
+\newcommand{\obert}[1]{\mathcal{#1}}
+
 %\setcounter{chapter}{-1}
 
 \setcounter{MaxMatrixCols}{20}
