--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -230,6 +230,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{axiom}[Axioma del Conjunt Potència]
+		\labelname{axioma del conjunt potència}\label{axiom:conjunt potència}
 		Sigui \(A\) un conjunt. Aleshores existeix un conjunt \(\mathcal{P}(A)\) tal que \(B\subseteq A\) si i només si \(B\in\mathcal{P}(A)\).
 	\end{axiom}
 	\begin{notation}
@@ -261,6 +262,7 @@
 		Aquesta definició té sentit per la proposició \myref{prop:conjunt buit}.
 	\end{definition}
 	\begin{axiom}[Axioma de Regularitat]
+		\labelname{axioma de regularitat}\label{axiom:axioma de regularitat}
 		Sigui \(A\) un conjunt. Aleshores tenim que \(\emptyset\subseteq A\).
 	\end{axiom}
 	\subsection{Unió i intersecció de conjunts}
