--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -53,13 +53,13 @@
 %		Aleshores direm que \(f\) és contínua.
 %	\end{definition}
 	\begin{theorem}
-		Siguin \((X,d)\) i \((X',d')\) dos espais mètrics i \(f\colon X\longrightarrow X'\) una funció. Aleshores \(f\) és contínua si i només si per a tot \(\mathcal{U}\) obert de \(X'\) tenim que \(\Ima_{\mathcal{U}}(f^{-1})\) és obert.
+		Siguin \((X,d)\) i \((X',d')\) dos espais mètrics i \(f\colon X\longrightarrow X'\) una funció. Aleshores \(f\) és contínua si i només si per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 		\begin{proof}
-			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\mathcal{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\mathcal{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\B(y,\varepsilon)\subset\Ima_{\mathcal{U}}(f^{-1})\).
+			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\B(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
 			
-			Prenem un element \(x'\) de \(\B(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\B(y,\varepsilon)\). Per tant tenim que \(\Ima_{\B(x,\delta)}(f)\subset\B(y,\varepsilon)\) i trobem que \(\B(x,\delta)\subset\Ima_{\mathcal{U}}(f^{-1})\), i per la definició de \myref{def:obert} trobem que \(\Ima_{\mathcal{U}}(f^{-1})\) és un obert, com volíem veure.
+			Prenem un element \(x'\) de \(\B(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\B(y,\varepsilon)\). Per tant tenim que \(\Ima_{\B(x,\delta)}(f)\subset\B(y,\varepsilon)\) i trobem que \(\B(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
 			
-			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que per a tot \(\mathcal{U}\) obert de \(X'\) tenim que \(\Ima_{\mathcal{U}}(f^{-1})\) és obert.
+			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 			
 			Prenem un element \(xy\) de \(X\) i un real \(\varepsilon>0\). Si denotem \(y=f(x)\) tenim, per la proposició \myref{prop:les boles són oberts}, que la bola \(\B(y,\varepsilon)\) és un obert. Per hipòtesi tenim que \(\Ima_{\B(y,\varepsilon)}(f^{-1})\) és un obert, i per la definició d'\myref{def:obert} tenim que existeix un nombre real \(\delta>0\) tal que \(\B(x,\delta)\subset\Ima_{\B(y,\varepsilon)}(f^{-1})\).
 			
@@ -70,18 +70,72 @@
 		\labelname{tancat}\label{def:tancat}
 		Sigui \(X\) un conjunt i \(C\) un subconjunt de \(X\) tal que \(X\setminus C\) sigui obert. Aleshores direm que \(C\) és tancat.
 	\end{definition}
-	\subsection{Axiomàtica de l'espai topològic}
+	\subsection{L'espai topològic}
 	\begin{definition}[Topologia]	% Reescriure amb notació
 		\labelname{topologia}\label{def:topologia}
-		\labelname{oberts topologia}\label{def:oberts topologia}
+		\labelname{espai topològic}\label{def:espai topològic}
+		\labelname{obert}\label{def:obert topologia}
+		\labelname{punt}\label{def:punt topologia}
 		Sigui \(X\) un conjunt i \(\tau\) una família de subconjunts de \(X\) tals que
 		\begin{enumerate}
 		\item \(\emptyset\) i \(X\) són elements de \(\tau\).
 		\item La intersecció d'una família finita d'elements de \(\tau\) és un element de \(\tau\).
 		\item La unió d'una família d'elements de \(\tau\) és un element de \(\tau\).
 		\end{enumerate}
-		Aleshores direm que \(\tau\) és una topologia de \(X\). També direm que els elements de \(\tau\) són oberts.
+		Aleshores direm que \(\tau\) és una topologia de \(X\) o que \(X\) amb \(\tau\) és un espai topològic. També direm que els elements de \(\tau\) són oberts i que els elements de \(X\) són punts.
 	\end{definition}
+	\begin{example}[Topologia grollera]
+		\labelname{topologia grollera}\label{ex:topologia grollera}
+		Siguin \(X\) i \(\tau=\{\emptyset,X\}\) dos conjunts. Aleshores \(\tau\) és una topologia de \(X\).
+		\begin{solution}
+			Comprovem les condicions de la definició de topologia. Com que \(\tau=\{\emptyset,X\}\) tenim que \(\emptyset\) i \(X\) són elements de \(\tau\). Observem també que
+			\[\emptyset\cap X=\emptyset,\quad X\cap X=X\quad\text{i}\quad\emptyset\cup X=X\cup X=X,\]
+			I per la definició de \myref{def:topologia}, tenim que \(\tau\) és una topologia de \(X\).
+		\end{solution}
+	\end{example}
+	\begin{example}[Topologia discreta]
+		\labelname{topologia discreta}\label{ex:topologia discreta}
+		Siguin \(X\) i \(\tau=\mathcal{P}(X)\) dos conjunts. Aleshores \(\tau\) és una topologia de \(X\).
+		\begin{solution}
+			Tenim per l'\myref{axiom:conjunt potència} que \(\emptyset\) i \(X\) són subconjunts de \(\tau\), ja que per l'\myref{axiom:axioma de regularitat} trobem que \(\emptyset\subseteq X\), i pel \myref{thm:doble inclusió} trobem que \(X\subseteq X\).
+			
+			Per la definició d'\myref{def:unió de conjunts} trobem que si \(\{\obert{U}_{i}\}_{i\in I}\) és una família de subconjunts de \(X\) aleshores
+			\[\bigcup_{i\in I}\obert{U}_{i}\subseteq X,\]
+			i per la definició d'\myref{def:intersecció de conjunts} trobem que si \(\{\obert{U}_{i}\}_{i=1}^{n}\) és una família de subconjunts de \(X\) aleshores
+			\[\bigcap_{i=1}^{n}\obert{U}_{i}\subseteq X,\]
+			i per tant, com que \(\tau=\mathcal{P}(X)\) trobem per la definició de \myref{def:topologia} que \(\tau\) és una topologia de \(X\).
+		\end{solution}
+	\end{example}
+	\begin{definition}[Aplicació contínua i homeomorfisme]
+		\labelname{aplicació contínua}\label{def:aplicació contínua}
+		\labelname{homeomorfisme}\label{def:homeomorfisme topo}
+		Siguin \(X\) amb \(\tau\) i \(X'\) amb \(\tau'\) dos espais topològics i \(f\colon X\longrightarrow X'\) una aplicació tal que per a tot obert \(\obert{U}\) de \(X'\) tenim que el conjunt
+		\[f^{-1}(\obert{U})=\{x\in X\mid f(x)\in\obert{U}\}\]
+		és un obert de \(X\). Aleshores direm que \(f\) és una aplicació contínua.
+		
+		Si \(f\) és invertible i la seva inversa és una aplicació contínua direm que \(f\) és un homeomorfisme.
+	\end{definition}
+	\begin{definition}[Finor d'una topologia]
+		\labelname{finor d'una topologia}\label{def:finor d'una topologia}
+		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau\subset\tau'\). Aleshores direm que \(\tau'\) és més fina que \(\tau\).
+	\end{definition}
+	\begin{proposition}
+		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau'\) sigui més fina que \(\tau\). Aleshores l'aplicació \(\Id\colon X\longrightarrow X'\) és una aplicació contínua.
+		\begin{proof}
+			
+		\end{proof}
+	\end{proposition}
+	\begin{proposition}
+		Siguin \(X_{1}\) amb \(\tau_{1}\), \(X_{2}\) amb \(\tau_{2}\) i \(X_{3}\) amb \(\tau_{3}\) tres espais topològics i \(f\colon X_{1}\longrightarrow X_{2}\) i \(g\colon X_{2}\longrightarrow X_{3}\) dues aplicacions contínues. Aleshores l'aplicació
+		\begin{align*}
+			h\colon&X_{1}\longrightarrow X_{3} \\
+			x&\longmapsto f(g(x))
+		\end{align*}
+		és una aplicació contínua.
+		\begin{proof}
+			
+		\end{proof}
+	\end{proposition}
 %	\subsection{L'espai topològic}
 %	\subsection{Entorns, interior i adherència}
 %	\subsection{Aplicacions contínues}
