Afegit teoria a topo. Estic enmig de la demostració de l'equivalència entre les definicions de topologia amb oberts i tancats

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -122,6 +122,7 @@
 \newcommand{\implicatper}{\impliedby}
 
 \newcommand{\obert}[1]{\mathcal{#1}}
+\newcommand{\tancat}[1]{\obert{#1}}
 
 %\setcounter{chapter}{-1}
 
