Afegit teoria a Topologia i l'exemple de la topologia induïda per una distància en un espai mètric.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -123,6 +123,7 @@
 
 \newcommand{\obert}[1]{\mathcal{#1}}
 \newcommand{\tancat}[1]{\obert{#1}}
+\newcommand{\base}[1]{\mathcal{#1}}
 
 %\setcounter{chapter}{-1}
 
