--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -23,8 +23,8 @@
 		com la bola de radi \(r\) centrada en \(a\).
 	\end{definition}
 	\begin{definition}[Obert]
-		\labelname{obert}\label{def:obert}
-		Sigui \(X\) amb la distància \(d\) un espai mètric tal que per a tot element \(a\) de \(X\) existeix un \(\varepsilon>0\) real tal que \(\B(a,\varepsilon)\subset A\). Aleshores direm que \(X\) és un obert.
+		\labelname{obert}\label{def:obert espai mètric}
+		Sigui \(X\) amb la distància \(d\) un espai mètric i \(A\) un subconjunt de \(X\) tals que per a tot element \(a\) de \(A\) existeix un \(\varepsilon>0\) real tal que \(\B(a,\varepsilon)\subset A\). Aleshores direm que \(A\) és un obert.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:les boles són oberts}
@@ -68,13 +68,13 @@
 	\begin{theorem}
 		Siguin \(X\) amb la distància \(d\) i \(X'\) amb la distància \(d'\) dos espais mètrics i \(f\colon X\longrightarrow X'\) una funció. Aleshores \(f\) és contínua si i només si per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 		\begin{proof}
-			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\B(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
+			Veiem primer que la condició és necessària (\(\implica\)). Suposem doncs que \(f\) és contínua. Prenem un obert \(\obert{U}\) de \(X'\) i un element \(y\) de \(X'\) tal que \(f^{-1}(y)\in\Ima_{\obert{U}}(f^{-1})\), i denotem \(x=f^{-1}(y)\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\varepsilon>0\) tal que \(\B(y,\varepsilon)\subset\Ima_{\obert{U}}(f^{-1})\).
 			
-			Prenem un element \(x'\) de \(\B(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\B(y,\varepsilon)\). Per tant tenim que \(\Ima_{\B(x,\delta)}(f)\subset\B(y,\varepsilon)\) i trobem que \(\B(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
+			Prenem un element \(x'\) de \(\B(y,\varepsilon)\). Per la definició de \myref{def:bola} tenim que \(d(x,x')<\varepsilon\), i per la definició de \myref{def:funció contínua} tenim que existeix un \(\delta>0\) real tal que \(d'(f(x'),y)<\varepsilon\), i per la definició de \myref{def:bola} això és que \(f(x')\in\B(y,\varepsilon)\). Per tant tenim que \(\Ima_{\B(x,\delta)}(f)\subset\B(y,\varepsilon)\) i trobem que \(\B(x,\delta)\subset\Ima_{\obert{U}}(f^{-1})\), i per la definició de \myref{def:obert espai mètric} trobem que \(\Ima_{\obert{U}}(f^{-1})\) és un obert, com volíem veure.
 			
 			Veiem ara que la condició és suficient (\(\implicatper\)). Suposem doncs que per a tot \(\obert{U}\) obert de \(X'\) tenim que \(\Ima_{\obert{U}}(f^{-1})\) és obert.
 			
-			Prenem un element \(xy\) de \(X\) i un real \(\varepsilon>0\). Si denotem \(y=f(x)\) tenim, per la proposició \myref{prop:les boles són oberts}, que la bola \(\B(y,\varepsilon)\) és un obert. Per hipòtesi tenim que \(\Ima_{\B(y,\varepsilon)}(f^{-1})\) és un obert, i per la definició d'\myref{def:obert} tenim que existeix un nombre real \(\delta>0\) tal que \(\B(x,\delta)\subset\Ima_{\B(y,\varepsilon)}(f^{-1})\).
+			Prenem un element \(xy\) de \(X\) i un real \(\varepsilon>0\). Si denotem \(y=f(x)\) tenim, per la proposició \myref{prop:les boles són oberts}, que la bola \(\B(y,\varepsilon)\) és un obert. Per hipòtesi tenim que \(\Ima_{\B(y,\varepsilon)}(f^{-1})\) és un obert, i per la definició d'\myref{def:obert espai mètric} tenim que existeix un nombre real \(\delta>0\) tal que \(\B(x,\delta)\subset\Ima_{\B(y,\varepsilon)}(f^{-1})\).
 			
 			Ara bé, per la definició de \myref{def:bola} tenim que això és que per a tot \(x_{0}\) de \(x\) amb \(d'(y,f(x_{0}))<\varepsilon\) tenim que \(d(x,x_{0})<\delta\), i per tant, per la definició de \myref{def:funció contínua} tenim que \(f\) és contínua.
 		\end{proof}
@@ -83,8 +83,8 @@
 	\begin{definition}[Topologia]	% Reescriure amb notació
 		\labelname{topologia}\label{def:topologia}
 		\labelname{espai topològic}\label{def:espai topològic}
-		\labelname{obert}\label{def:obert topologia}
-		\labelname{punt}\label{def:punt topologia}
+		\labelname{obert}\label{def:obert}
+		\labelname{punt}\label{def:punt}
 		Sigui \(X\) un conjunt i \(\tau\) una família de subconjunts de \(X\) tals que
 		\begin{enumerate}
 		\item \(\emptyset\) i \(X\) són elements de \(\tau\).
@@ -95,6 +95,16 @@
 		
 		També direm que els elements de \(\tau\) són oberts i que els elements de \(X\) són punts.
 	\end{definition}
+	\begin{example}[Topologia induïda per una mètrica]
+		\labelname{}\label{ex:topologia induïda per una mètrica}
+		Siguin \(X\) amb la distància \(d\) un espai mètric i \(\tau=\{\obert{U}\subseteq X\mid \obert{U}\text{ és un obert}\}\). Volem veure que \(X\) amb la topologia \(\tau\) és un espai topològic.
+		\begin{solution}
+			Per la definició d'\myref{def:obert espai mètric} trobem que \(\emptyset\) és un obert i que \(X\) és un obert, ja que per a tot \(x\) element de \(X\) per la proposició \myref{prop:les boles són oberts} tenim que \(\B(x,\varepsilon)\) és un subconjunt de \(X\) per a tot \(\varepsilon>0\).
+			
+			Prenem \(\{\obert{U}_{i}\}_{i=1}^{n}\) una família d'elements de \(\tau\) i considerem
+			\[\bigcap_{i=1}^{n}\obert{U}_{i}\] %CLAUDI
+		\end{solution}
+	\end{example}
 	\begin{example}[Topologia grollera]
 		\labelname{topologia grollera}\label{ex:topologia grollera}
 		Siguin \(X\) i \(\tau=\{\emptyset,X\}\) dos conjunts. Aleshores \(\tau\) és una topologia de \(X\).
@@ -158,34 +168,54 @@
 			i per tant, per la definició de \myref{def:tancat} trobem que \(\bigcup_{i=1}^{n}\tancat{C}_{i}\) és un tancat.
 			
 			Veiem per acabat el punt \eqref{thm:equivalència obert tancat definició de topologia:enum 3}. Prenem una família \(\{\tancat{C}_{i}\}_{i\in I}\) de tancats de \(X\) i considerem
-			\[X\setminus\bigcap_{i\in I}\tancat{C}_{i}=X\cap\left(\bigcap_{i\in I}\tancat{C}_{i}\right)^{\complement}.\qedhere\]
+			\[X\setminus\bigcap_{i\in I}\tancat{C}_{i}=X\cap\left(\bigcap_{i\in I}\tancat{C}_{i}\right)^{\complement}.\]
+			Per la \myref{taut:segona llei de De Morgan} trobem que
+			\begin{align*}
+				X\cap\left(\bigcap_{i\in I}\tancat{C}_{i}\right)^{\complement}&=X\cap\left(\bigcup_{i\in I}\tancat{C}_{i}^{\complement}\right) \\
+				&=\bigcup_{i\in I}\left(X\cap\tancat{C}_{i}^{\complement}\right) \\
+				&=\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right).
+			\end{align*}
+			Ara bé, per la definició de \myref{def:tancat} tenim que per a tot \(i\in I\) el conjunt \(X\setminus\tancat{C}_{i}\) és un obert, i per la definició de \myref{def:espai topològic} trobem que el conjunt \(\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right)\) és un obert. Tenim
+			\[X\setminus\bigcap_{i\in I}\tancat{C}_{i}=\bigcup_{i\in I}\left(X\setminus\tancat{C}_{i}\right),\]
+			i, de nou per la definició de \myref{def:tancat}, tenim que \(\bigcap_{i\in I}\tancat{C}_{i}\) és un tancat, com volíem veure.
 		\end{proof}
 	\end{theorem}
-	\begin{definition}[Aplicació contínua i homeomorfisme]
-		\labelname{aplicació contínua}\label{def:aplicació contínua}
-		\labelname{homeomorfisme}\label{def:homeomorfisme topo}
-		Siguin \(X\) amb \(\tau\) i \(X'\) amb \(\tau'\) dos espais topològics i \(f\colon X\longrightarrow X'\) una aplicació tal que per a tot obert \(\obert{U}\) de \(X'\) tenim que el conjunt
-		\[f^{-1}(\obert{U})=\{x\in X\mid f(x)\in\obert{U}\}\]
-		és un obert de \(X\). Aleshores direm que \(f\) és una aplicació contínua.
-		
-		Si \(f\) és invertible i la seva inversa és una aplicació contínua direm que \(f\) és un homeomorfisme.
+	\subsection{Base d'una topologia}
+	\begin{definition}[Base]
+		\labelname{base d'una topologia}\label{def:base d'una topologia}
+		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(\base{B}\) una família d'oberts tals que per a tot obert \(\obert{U}\) de \(X\) i per a tot punt \(x\) de \(\obert{U}\) existeix un \(B\in\base{B}\) tal que \(x\in B\subseteq\obert{U}\). Aleshores direm que \(\base{B}\) és una base de la topologia \(\tau\).
 	\end{definition}
-	\begin{observation}
-		\label{obs:les funcions contínues són aplicacions contínues}
-		Sigui \(f\) una funció contínua. Aleshores \(f\) és una aplicació contínua.
-	\end{observation}
-	\begin{proposition}
-		Siguin \(X_{1}\) amb la topologia \(\tau_{1}\), \(X_{2}\) amb la topologia \(\tau_{2}\) i \(X_{3}\) amb la topologia \(\tau_{3}\) tres espais topològics i \(f\colon X_{1}\longrightarrow X_{2}\) i \(g\colon X_{2}\longrightarrow X_{3}\) dues aplicacions contínues. Aleshores l'aplicació
-		\begin{align*}
-			h\colon X_{1}&\longrightarrow X_{3} \\
-			x&\longmapsto f(g(x))
-		\end{align*}
-		és una aplicació contínua.
-		\begin{proof}
-			
-		\end{proof}
-	\end{proposition}
-%	\subsection{L'espai topològic}
+	\begin{example}
+		Siguin \(X\) amb la distància \(d\) un espai mètric i
+		\[\base{B}=\{\B(x,\varepsilon)\mid x\in X,\varepsilon>0\}\]
+		un conjunt. Aleshores \(\base{B}\) és una base de la topologia \(\tau\).
+	\end{example}
+	
+%	\begin{definition}[Aplicació contínua i homeomorfisme]
+%		\labelname{aplicació contínua}\label{def:aplicació contínua}
+%		\labelname{homeomorfisme}\label{def:homeomorfisme topo}
+%		Siguin \(X\) amb \(\tau\) i \(X'\) amb \(\tau'\) dos espais topològics i \(f\colon X\longrightarrow X'\) una aplicació tal que per a tot obert \(\obert{U}\) de \(X'\) tenim que el conjunt
+%		\[f^{-1}(\obert{U})=\{x\in X\mid f(x)\in\obert{U}\}\]
+%		és un obert de \(X\). Aleshores direm que \(f\) és una aplicació contínua.
+%		
+%		Si \(f\) és invertible i la seva inversa és una aplicació contínua direm que \(f\) és un homeomorfisme.
+%	\end{definition}
+%	\begin{observation}
+%		\label{obs:les funcions contínues són aplicacions contínues}
+%		Sigui \(f\) una funció contínua. Aleshores \(f\) és una aplicació contínua. %Proof?
+%	\end{observation}
+%	\begin{proposition}
+%		Siguin \(X_{1}\) amb la topologia \(\tau_{1}\), \(X_{2}\) amb la topologia \(\tau_{2}\) i \(X_{3}\) amb la topologia \(\tau_{3}\) tres espais topològics i \(f\colon X_{1}\longrightarrow X_{2}\) i \(g\colon X_{2}\longrightarrow X_{3}\) dues aplicacions contínues. Aleshores l'aplicació
+%		\begin{align*}
+%			h\colon X_{1}&\longrightarrow X_{3} \\
+%			x&\longmapsto f(g(x))
+%		\end{align*}
+%		és una aplicació contínua.
+%		\begin{proof}
+%			
+%		\end{proof}
+%	\end{proposition}
+
 %	\subsection{Entorns, interior i adherència}
 %	\subsection{Aplicacions contínues}
 %	\subsection{Subespais}
