--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -24,7 +24,7 @@
 	\end{definition}
 	\begin{definition}[Obert]
 		\labelname{obert}\label{def:obert espai mètric}
-		Sigui \(X\) amb la distància \(d\) un espai mètric i \(A\) un subconjunt de \(X\) tals que per a tot element \(a\) de \(A\) existeix un \(\varepsilon>0\) real tal que \(\B(a,\varepsilon)\subset A\). Aleshores direm que \(A\) és un obert.
+		Sigui \(X\) amb la distància \(d\) un espai mètric i \(\obert{U}\) un subconjunt de \(X\) tals que per a tot element \(x\) de \(\obert{U}\) existeix un \(\varepsilon>0\) real tal que \(\B(x,\varepsilon)\subset\obert{U}\). Aleshores direm que \(\obert{U}\) és un obert.
 	\end{definition}
 	\begin{proposition}
 		\label{prop:les boles són oberts}
@@ -96,13 +96,28 @@
 		També direm que els elements de \(\tau\) són oberts i que els elements de \(X\) són punts.
 	\end{definition}
 	\begin{example}[Topologia induïda per una mètrica]
-		\labelname{}\label{ex:topologia induïda per una mètrica}
+		\labelname{}\label{ex:topologia induida per una mètrica}
 		Siguin \(X\) amb la distància \(d\) un espai mètric i \(\tau=\{\obert{U}\subseteq X\mid \obert{U}\text{ és un obert}\}\). Volem veure que \(X\) amb la topologia \(\tau\) és un espai topològic.
 		\begin{solution}
 			Per la definició d'\myref{def:obert espai mètric} trobem que \(\emptyset\) és un obert i que \(X\) és un obert, ja que per a tot \(x\) element de \(X\) per la proposició \myref{prop:les boles són oberts} tenim que \(\B(x,\varepsilon)\) és un subconjunt de \(X\) per a tot \(\varepsilon>0\).
 			
 			Prenem \(\{\obert{U}_{i}\}_{i=1}^{n}\) una família d'elements de \(\tau\) i considerem
-			\[\bigcap_{i=1}^{n}\obert{U}_{i}\] %CLAUDI
+			\[\obert{U}=\bigcap_{i=1}^{n}\obert{U}_{i}.\]
+			
+			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:obert} tenim que per a tot \(i\in\{1,\dots,n\}\) existeix un \(\varepsilon_{i}>0\) real tal que
+			\[\B(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
+			Per tant, si definim \(\varepsilon=\min_{i\in\{1,\dots,n\}}\varepsilon_{i}\). Aleshores per la definició de \myref{def:bola} tenim que
+			\[\B(x,\varepsilon)\subseteq\B(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
+			i per tant \(\B(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert.
+			
+			Prenem \(\{\obert{U}_{i}\}_{i\in I}\) una família d'oberts de \(\tau\) i considerem
+			\[\obert{U}=\bigcup_{i\in I}\obert{U}_{i}.\]
+			
+			Sigui \(x\) un element de \(\obert{U}\). Per la definició d'\myref{def:obert} tenim que per a tot \(i\in\{1,\dots,n\}\) existeix un \(\varepsilon_{i}>0\) real tal que
+			\[\B(x,\varepsilon_{i})\subset\obert{U}_{i}.\]
+			Per tant, si definim \(\varepsilon=\min_{i\in\{1,\dots,n\}}\varepsilon_{i}\). Aleshores per la definició de \myref{def:bola} tenim que
+			\[\B(x,\varepsilon)\subseteq\B(x,\varepsilon_{i})\quad\text{per a tot }i\in\{1,\dots,n\}.\]
+			i per tant \(\B(x,\varepsilon)\subset\obert{U}\) i per la definició de \myref{def:obert} tenim que \(\obert{U}\) és un obert, i per la definició de \myref{def:espai topològic} hem acabat.
 		\end{solution}
 	\end{example}
 	\begin{example}[Topologia grollera]
@@ -127,16 +142,6 @@
 			i per tant, com que \(\tau=\mathcal{P}(X)\) trobem per la definició de \myref{def:topologia} que \(\tau\) és una topologia de \(X\).
 		\end{solution}
 	\end{example}
-%	\begin{definition}[Finor d'una topologia]
-%		\labelname{finor d'una topologia}\label{def:finor d'una topologia}
-%		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau\subset\tau'\). Aleshores direm que \(\tau'\) és més fina que \(\tau\).
-%	\end{definition}
-%	\begin{proposition}
-%		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau'\) sigui més fina que \(\tau\). Aleshores l'aplicació \(\Id\colon X\longrightarrow X'\) és una aplicació contínua.
-%		\begin{proof}
-%			
-%		\end{proof}
-%	\end{proposition}
 	\subsection{Tancats}
 	\begin{definition}[Tancat]
 		\labelname{tancat}\label{def:tancat}
@@ -181,16 +186,42 @@
 		\end{proof}
 	\end{theorem}
 	\subsection{Base d'una topologia}
-	\begin{definition}[Base]
+	\begin{definition}[Base d'una topologia]
 		\labelname{base d'una topologia}\label{def:base d'una topologia}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(\base{B}\) una família d'oberts tals que per a tot obert \(\obert{U}\) de \(X\) i per a tot punt \(x\) de \(\obert{U}\) existeix un \(B\in\base{B}\) tal que \(x\in B\subseteq\obert{U}\). Aleshores direm que \(\base{B}\) és una base de la topologia \(\tau\).
 	\end{definition}
 	\begin{example}
 		Siguin \(X\) amb la distància \(d\) un espai mètric i
-		\[\base{B}=\{\B(x,\varepsilon)\mid x\in X,\varepsilon>0\}\]
-		un conjunt. Aleshores \(\base{B}\) és una base de la topologia \(\tau\).
+		\[\base{B}=\{\B(x,\varepsilon)\mid x\in X\text{ i }\varepsilon>0\}\]
+		un conjunt. Aleshores \(\base{B}\) és una base de la topologia \(\tau\) induïda per la mètrica.
+		\begin{solution}
+			Tenim que
+			\[\tau=\{\obert{U}\subseteq X\mid\obert{U}\text{ es un obert}\}.\]
+			
+			Prenem doncs un obert \(\obert{U}\) de \(\tau\) i un punt \(x\) de \(\obert{U}\). Per la definició d'\myref{def:obert espai mètric} tenim que existeix un \(\varepsilon>0\) real tal que \(\B(x,\varepsilon)\) és un subconjunt de \(\obert{U}\), i per la definició de \myref{def:base d'una topologia} hem acabat.
+		\end{solution}
 	\end{example}
-	
+	\begin{definition}[Finor d'una topologia]
+		\labelname{finor d'una topologia}\label{def:finor d'una topologia}
+		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau\subset\tau'\). Aleshores direm que \(\tau'\) és més fina que \(\tau\).
+	\end{definition}
+%	\begin{proposition}
+%		Siguin \(X\) un conjunt i \(\tau\), \(\tau'\) dues topologies de \(X\) tals que \(\tau'\) sigui més fina que \(\tau\). Aleshores l'aplicació \(\Id\colon X\longrightarrow X'\) és una aplicació contínua.
+%		\begin{proof}
+%			
+%		\end{proof}
+%	\end{proposition}
+	\begin{proposition}
+		\label{prop:condició equivalent a base d'una topologia}
+		\label{prop:condició per que una topologia sigui la més fina que conté una base}
+		Siguin \(X\) un conjunt i \(\base{B}\) una família de subconjunts de \(X\) tals que
+		\[\bigcup_{B\in\base{B}}B=X\]
+		i tal que per a tot \(\obert{U}\) i \(\obert{V}\) de \(\base{B}\) i per a tot \(x\) de \(\obert{U}\cap\obert{V}\) existeix un \(\obert{W}\) de \(\base{B}\) tal que \(x\) pertanyi a \(\obert{W}\) i \(\obert{W}\subseteq\obert{U}\cap\obert{V}\). Aleshores existeix una única topologia \(\tau\) de \(X\) tal que \(\base{B}\) és una base de \(\tau\) i \(\tau\) és la topologia menys fina que conté \(\base{B}\).
+		\begin{proof}
+			Definim
+			\[\tau=\left\{\obert{U}\subseteq X\mid\obert{U}=\bigcup_{i\in I}B_{i}\text{ on }B_{i}\in\base{B}\right\}\]
+		\end{proof}
+	\end{proposition}
 %	\begin{definition}[Aplicació contínua i homeomorfisme]
 %		\labelname{aplicació contínua}\label{def:aplicació contínua}
 %		\labelname{homeomorfisme}\label{def:homeomorfisme topo}
