Afegit una mica més de temari a Toplogia. Començada la secció d'entorns, interior i adherència.

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -110,6 +110,7 @@
 \DeclareMathOperator{\ordre}{\omicron}
 \DeclareMathOperator{\ncicles}{c}
 \DeclareMathOperator{\sig}{sig}
+\DeclareMathOperator{\Int}{Int}
 
 \let\ker\relax
 \DeclareMathOperator*{\ker}{ker}
@@ -130,7 +131,6 @@
 \newcommand{\obert}[1]{\mathcal{#1}}
 \newcommand{\tancat}[1]{\obert{#1}}
 \newcommand{\base}[1]{\mathcal{#1}}
-\newcommand{\gmid}{\mathbin{\vert}}
 
 %\setcounter{chapter}{-1}
 
